# Grafika-HF

./: .gitignore  CMakeLists.txt  Readme.md  Skeleton.cpp
.github/workflows/: cmake.yml
HF1/: Skeleton.cpp
HF2/: CMakeLists.txt  Skeleton.cpp
